Enum task_status {
  todo
  in_progress
  done
}

Enum task_priority {
  low
  medium
  high
}

Enum project_role {
  owner
  member
}

Table user {
  id integer [pk, increment]
  name varchar(100) [not null]
  email varchar(255) [not null, unique]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table project {
  id integer [pk, increment]
  name varchar(150) [not null]
  description text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table task {
  id integer [pk, increment]
  title varchar(255) [not null]
  description text
  status task_status [not null, default: 'todo']
  priority task_priority [not null, default: 'medium']
  due_date date
  project_id integer [not null]
  assignee_id integer [null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table project_user {
  project_id integer [not null]
  user_id integer [not null]
  role project_role [not null, default: 'member']
  joined_at timestamptz [not null, default: `now()`]

  indexes {
    (project_id, user_id) [pk]
    (project_id, role) [note: 'migration: partial UNIQUE index WHERE role = owner — enforces at most one owner per project']
  }
}


Ref: task.project_id > project.id [delete: cascade]

Ref: task.assignee_id > user.id [delete: set null]

Ref: project_user.project_id > project.id [delete: cascade]

Ref: project_user.user_id > user.id [delete: cascade]